logs/dag_id=postgres_operator_1/run_id=manual__2024-06-24T01:53:21.622148+00:00/task_id=create_table/attempt=3.log
[2024-06-24T01:55:25.393+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-24T01:55:25.414+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: postgres_operator_1.create_table manual__2024-06-24T01:53:21.622148+00:00 [queued]>
[2024-06-24T01:55:25.421+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: postgres_operator_1.create_table manual__2024-06-24T01:53:21.622148+00:00 [queued]>
[2024-06-24T01:55:25.423+0000] {taskinstance.py:2306} INFO - Starting attempt 3 of 6
[2024-06-24T01:55:25.431+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_table> on 2024-06-24 01:53:21.622148+00:00
[2024-06-24T01:55:25.436+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=288) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-24T01:55:25.437+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_1', 'create_table', 'manual__2024-06-24T01:53:21.622148+00:00', '--job-id', '6', '--raw', '--subdir', 'DAGS_FOLDER/dag_create_table.py', '--cfg-path', '/tmp/tmpufn8js96']
[2024-06-24T01:55:25.438+0000] {standard_task_runner.py:63} INFO - Started process 289 to run task
[2024-06-24T01:55:25.439+0000] {standard_task_runner.py:91} INFO - Job 6: Subtask create_table
[2024-06-24T01:55:25.471+0000] {task_command.py:426} INFO - Running <TaskInstance: postgres_operator_1.create_table manual__2024-06-24T01:53:21.622148+00:00 [running]> on host 18d040e2d413
[2024-06-24T01:55:25.510+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='postgres_operator_1' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-06-24T01:53:21.622148+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-24T01:53:21.622148+00:00'
[2024-06-24T01:55:25.512+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-24T01:55:25.528+0000] {sql.py:276} INFO - Executing: 
        create table if not exists ***(
            department_name varchar,
            sensor_serial varchar,
            create_at timestamp,
            product_name varchar,
            product_expire timestamp,
        )
    
[2024-06-24T01:55:25.540+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-24T01:55:25.548+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-24T01:55:25.563+0000] {sql.py:487} INFO - Running statement: 
        create table if not exists ***(
            department_name varchar,
            sensor_serial varchar,
            create_at timestamp,
            product_name varchar,
            product_expire timestamp,
        )
    , parameters: None
[2024-06-24T01:55:25.567+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-24T01:55:25.569+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:         )
                ^

[2024-06-24T01:55:25.589+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=postgres_operator_1, task_id=create_table, run_id=manual__2024-06-24T01:53:21.622148+00:00, execution_date=20240624T015321, start_date=20240624T015525, end_date=20240624T015525
[2024-06-24T01:55:25.599+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 6 for task create_table (syntax error at or near ")"
LINE 8:         )
                ^
; 289)
[2024-06-24T01:55:25.620+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-24T01:55:25.628+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1297: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-06-24T01:55:25.636+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-24T01:55:25.638+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
